<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="288dp"
                                                 tools:ignore="MissingConstraints"
                                                 android:background="@color/color1_opacity"
                                                 tools:layout_editor_absoluteX="0dp"
                                                 tools:layout_editor_absoluteY="1dp"
                                                 android:id="@+id/top">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btnSkip"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/NameApp"
                  android:text="@string/best_trip"
                  android:textSize="45sp"
                  android:textColor="@color/common_google_signin_btn_text_dark_default"

                  android:layout_alignParentEnd="true"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentTop="true"
                  android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.438"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/Slogan"
                  android:text="@string/slogan"
                  android:textSize="15sp"
                  android:textColor="@color/common_google_signin_btn_text_dark_default"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/NameApp"/>
    </android.support.constraint.ConstraintLayout>

    <RelativeLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:id="@+id/bottom"
                                                 tools:layout_editor_absoluteY="289dp"
                                                 tools:layout_editor_absoluteX="0dp" tools:ignore="MissingConstraints"
                                                 android:background="@color/color1"
    android:layout_below="@id/top">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="90dp"
                                                     android:orientation="horizontal"
                                                     android:id="@+id/group_btn"
                                                     tools:layout_editor_absoluteY="0dp"
                                                     tools:layout_editor_absoluteX="56dp">
            <TextView android:layout_width="203dp" android:layout_height="match_parent"
                      android:id="@+id/btnLogin"
                      android:text="@string/login"
                      android:textSize="20sp"
                      android:gravity="center"
                      android:textColor="@color/common_google_signin_btn_text_dark_default"
                      android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
                      android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.909"/>
            <TextView android:layout_width="203dp" android:layout_height="match_parent"
                      android:id="@+id/btnSignUp"
                      android:text="@string/sign_up"
                      android:textSize="20sp"
                      android:gravity="center"
                      android:textColor="@color/common_google_signin_btn_text_dark_default"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>

            <include
            android:id="@+id/add_form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_btn"
            layout="@layout/form_login"/>
            <include
            android:id="@+id/add_form_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/group_btn"
            layout="@layout/form_sign_up"/>

    </RelativeLayout>

</RelativeLayout>