<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="288dp"
                                                 tools:ignore="MissingConstraints"
                                                 android:background="@color/color1"
                                                 tools:layout_editor_absoluteX="0dp"
                                                 tools:layout_editor_absoluteY="1dp"
                                                 android:id="@+id/top">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/NameApp"
                  android:text="@string/best_trip"
                  android:textSize="45sp"
                  android:textColor="@color/common_google_signin_btn_text_dark_default"

                  android:layout_alignParentEnd="true"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentTop="true"
                  android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.438"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/Slogan"
                  android:text="@string/slogan"
                  android:textSize="15sp"
                  android:textColor="@color/common_google_signin_btn_text_dark_default"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/NameApp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:id="@+id/bottom"
                                                 tools:layout_editor_absoluteY="289dp"
                                                 tools:layout_editor_absoluteX="0dp" tools:ignore="MissingConstraints"
                                                 android:background="@color/color1"
                                                 android:layout_below="@id/top">

        <TextView
                android:text="@string/loadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:maxEms="16"
                android:id="@+id/txtLocation"
                android:drawableStart="@drawable/ic_place_white_24dp"
                android:drawablePadding="5dp"
                tools:layout_editor_absoluteY="36dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/btnWhere"
                android:text="@string/where_you_heading"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:background="@drawable/shape_button"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:drawableStart="@drawable/ic_flag_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"/>



    </android.support.constraint.ConstraintLayout>
    <ImageButton android:layout_width="52dp" android:layout_height="52dp"
    android:layout_marginLeft="355dp"
                 android:id="@+id/btnMap"
    android:src="@drawable/ic_map_white_24dp"
    android:background="@null"/>

</RelativeLayout>